# cppCMake_CI

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  vcpkg.json
.github/workflows/: main.yml
dev_test/: CMakeLists.txt  main.cpp
